--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CogniTrentAI</title>
+  <title>UI SpyGlass</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>CogniTrentAI</h1>
+    <h1>UI SpyGlass</h1>
     <p>✨ AI-Powered Precision Design Analysis ✨</p>
     <small>Pixel-Perfect Comparison Engine • Zero-Tolerance Testing</small>
   </header>
-
-  <section class="upload-section">
+  <!-- Mode Selection Dropdown -->
+<section class="mode-selector" style="text-align: center; margin: 20px 0;">
+  <label for="mode">Choose Mode:</label>
+  <select id="mode" onchange="toggleMode()" style="padding: 6px 10px; border-radius: 5px;">
+    <option value="image">🖼️ Image Comparison</option>
+    <option value="web">🌐 Web Page Audit</option>
+  </select>
+</section>
+  <section class="upload-section" id="image-upload-section">
     <div class="upload-box gradient-box">
       <img src="https://cdn-icons-png.flaticon.com/512/1828/1828919.png" alt="Design A" />
       <h2>Upload Design A</h2>
@@ -32,6 +39,15 @@
       <span class="file-name" id="file-name-b">Supports PNG, JPG, GIF up to 10MB</span>
     </div>
   </section>
+  <section class="upload-section" id="web-audit-section" style="display: none;">
+  <div class="upload-box gradient-box">
+    <img src="https://cdn-icons-png.flaticon.com/512/1670/1670626.png" alt="Web URL Audit" />
+    <h2>Enter Web Page URL</h2>
+    <p>AI will audit this live web page</p>
+    <input type="url" id="audit-url" placeholder="https://example.com" style="padding: 10px; border-radius: 5px; width: 80%;" />
+    <button onclick="startWebAudit()" style="margin-top: 10px;">🚀 Start Web Audit</button>
+  </div>
+</section>
   <!-- Place this after the upload-section and before analysis-section -->
 <div class="start-analysis-container">
   <button class="start-analysis-btn">⚡ Start AI Analysis ⚡</button>
@@ -95,7 +111,7 @@
     formData.append("designB", fileB);
 
     try {
-      const response = await fetch("https://my-cognitrentai-tool-1.onrender.com/analyze", {
+       const response = await fetch("http://localhost:5000/analyze", {
         method: "POST",
         body: formData,
       });
@@ -140,6 +156,16 @@
   document.body.appendChild(container);
   container.scrollIntoView({ behavior: "smooth" });
 }
+
+function startWebAudit() {
+  const url = document.getElementById("audit-url").value;
+  if (!url || !url.startsWith("http")) {
+    alert("Please enter a valid URL starting with http or https.");
+    return;
+  }
+
+  alert("🌐 Web audit for " + url + " is not yet implemented.");
+}
 function downloadJSON() {
   const reportSection = document.querySelector(".defect-report-section ul");
   const items = reportSection.querySelectorAll("li");
@@ -164,9 +190,46 @@ function downloadJSON() {
   a.click();
   URL.revokeObjectURL(url);
 }
+  function downloadPDF() {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
 
-function downloadPDF() {
-  alert("🧾 PDF export is not yet implemented. Want me to enable jsPDF for this?");
+  const reportSection = document.querySelector(".defect-report-section");
+  let y = 10;
+
+  doc.setFontSize(16);
+  doc.text("🧠 AI Defect Report", 10, y);
+  y += 10;
+
+  const items = reportSection.querySelectorAll("li");
+  items.forEach((li) => {
+    const text = li.innerText;
+    const lines = doc.splitTextToSize(text, 180);
+    doc.text(lines, 10, y);
+    y += lines.length * 10;
+    if (y > 280) {
+      doc.addPage();
+      y = 10;
+    }
+  });
+
+  doc.save("ai-defect-report.pdf");
+}
+function toggleMode() {
+  const selectedMode = document.getElementById("mode").value;
+  const imageSection = document.getElementById("image-upload-section");
+  const webSection = document.getElementById("web-audit-section");
+  const startAnalysisBtn = document.querySelector(".start-analysis-container");
+
+  if (selectedMode === "image") {
+    imageSection.style.display = "flex";
+    webSection.style.display = "none";
+    startAnalysisBtn.style.display = "block";
+  } else if (selectedMode === "web") {
+    imageSection.style.display = "none";
+    webSection.style.display = "flex";
+    startAnalysisBtn.style.display = "none";  // Hide "Start AI Analysis" for web mode
+  }
 }
 </script>
 </body>
