--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     formData.append("designB", fileB);
 
     try {
-       const response = await fetch("http://localhost:5000/analyze", {
+       const response = await fetch("https://my-cognitrentai-tool-1.onrender.com/analyze", {
         method: "POST",
         body: formData,
       });
